fix spacing on table letters

--- a/front-end/styles/styleContactManagerHome.css
+++ b/front-end/styles/styleContactManagerHome.css
@@ -26,6 +26,7 @@ th {
   font-size: large;
   border: 0;
   padding: 0.5rem;
+  letter-spacing: 1px;
   /* border-bottom: 1px solid rgba(255, 255, 255, 0.5); */
 }
 
@@ -34,6 +35,7 @@ td {
   background: rgba(12, 12, 12, 0.822);
   width: 50%;
   padding: 0.5rem;
+  letter-spacing: 1px;
 }
 
 .contact-row {
